--- a/SecureWalk/src/app/components/encuesta/listarencuesta/listarencuesta.component.html
+++ b/SecureWalk/src/app/components/encuesta/listarencuesta/listarencuesta.component.html
@@ -16,6 +16,10 @@
             <mat-icon class="card-icon">event</mat-icon> Fecha de Creación:
             {{ encuesta.fechaCreacionEncuesta| date : 'shortDate' }}
           </p>
+          <p>
+            <mat-icon class="card-icon">description</mat-icon> Descripción:
+            {{ encuesta.descripcionEncuesta }}
+          </p>
           </div>
         <div class="card-actions">
           <button
