--- a/SecureWalk/src/app/components/landing/landing.component.html
+++ b/SecureWalk/src/app/components/landing/landing.component.html
@@ -4,6 +4,7 @@
     SecureWalk
   </span>
   <span class="spacer"></span>
+  <a mat-button routerLink="/login">Iniciar sesión</a>
 </mat-toolbar>
 
 <main>
