--- a/SecureWalk/src/app/components/menu/menu.component.html
+++ b/SecureWalk/src/app/components/menu/menu.component.html
@@ -151,7 +151,7 @@
   <button mat-menu-item routerLink="/respuestas/formulario">Insertar</button>
 </mat-menu>
 <mat-menu #menuSalir="matMenu">
-  <button mat-menu-item routerLink="/login" (click)="cerrar()">
+  <button mat-menu-item routerLink="/landing" (click)="cerrar()">
     <mat-icon>logout</mat-icon>
     <span>Cerrar sesión</span>
   </button>
