--- a/SecureWalk/src/app/components/login/login.component.html
+++ b/SecureWalk/src/app/components/login/login.component.html
@@ -1,24 +1,28 @@
 <div class="container" style="text-align: center">
-    <div>
-      <img src="assets/logo.png" alt="Logo de la empresa" >
-
-    </div>
-    <h2>Inicie sesión</h2>
-    <mat-form-field class="example-full-width">
-      <mat-label>Usuario</mat-label>
-      <input matInput placeholder="Username" [(ngModel)]="username" />
-    </mat-form-field>
-    <br />
-    <mat-form-field class="example-full-width">
-      <mat-label>Password</mat-label>
-      <input
-        type="password"
-        matInput
-        placeholder="Password"
-        [(ngModel)]="password"
-      />
-    </mat-form-field>
-    <br />
-    <button mat-raised-button class="custom-button" (click)="login()">Ingresar</button>
+  <div>
+    <img
+      src="assets/logo-secureWalk.png"
+      alt="Logo de la empresa"
+      style="width: 500px; max-width: 100%; margin-bottom: 16px"
+    />
   </div>
-
+  <h2>Inicie sesión</h2>
+  <mat-form-field class="example-full-width">
+    <mat-label>Usuario</mat-label>
+    <input matInput placeholder="Username" [(ngModel)]="username" />
+  </mat-form-field>
+  <br />
+  <mat-form-field class="example-full-width">
+    <mat-label>Password</mat-label>
+    <input
+      type="password"
+      matInput
+      placeholder="Password"
+      [(ngModel)]="password"
+    />
+  </mat-form-field>
+  <br />
+  <button mat-raised-button class="custom-button" (click)="login()">
+    Ingresar
+  </button>
+</div>
